Fix HP and invisible state errors

--- a/src/components/hptracker/hp-tracker.scss
+++ b/src/components/hptracker/hp-tracker.scss
@@ -4,9 +4,10 @@
     gap: 2px;
 
     .player-wrapper {
-        display: flex;
-        justify-content: space-between;
-        gap: 5px;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        justify-items: flex-start;
+        gap: 10px;
         border-bottom: 1px solid white;
         padding: 5px 5px 1px;
 
@@ -38,6 +39,10 @@
                     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='48' viewBox='0 -960 960 960' width='48'%3E%3Cpath d='M200-450v-60h560v60H200Z' fill='white'/%3E%3C/svg%3E");
                 }
             }
+        }
+
+        .armor-class {
+            justify-self: flex-end;
         }
 
         input[type="number"] {
